# rpi-derive-key

./: Cargo.toml  README.md  deny.toml  justfile  rpi-derive-key.code-workspace  rust-toolchain.toml  vscode.code-workspace
.github/workflows/: pipeline.yml  python.yml
crates/rpi-derive-key/: Cargo.toml  README.md
crates/rpi-derive-key-cli/: Cargo.toml
crates/rpi-derive-key-cli/src/: main.rs
crates/rpi-derive-key/src/: lib.rs  linux.rs  rpi.rs  secrets.rs  vcio.rs
crates/rpi-derive-key/src/linux/: otp.rs  vcio.rs
crates/rpi-derive-key/src/rpi/: otp.rs  vcio.rs
python/: Cargo.toml  pyproject.toml  rpi_derive_key.pyi
python/src/: lib.rs
scripts/: build-deb-package.sh
