[package]
name = "rpi-derive-key-python"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
name = "rpi_derive_key"
doc = false
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.18.0", features = ["extension-module", "abi3-py37"] }
rpi-derive-key = { path = "../crates/rpi-derive-key" }
