[package]
name = "rpi-derive-key-cli"
description = "A utility for deriving secure device-specific keys on Raspberry Pi."
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "rpi-derive-key"
path = "src/main.rs"

[dependencies]
rpi-derive-key = { path = "../rpi-derive-key" }
clap = { version = "4.1.4", features = ["derive", "cargo"] }
uuid = "1.2.2"
