[package]
name = "rpi-derive-key"
description = "A utility crate for deriving secure device-specific keys on Raspberry Pi."
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
hkdf = "0.12"  # PRIVATE
sha3 = "0.10"  # PRIVATE
nix = { version = "0.26", features = ["ioctl"] }  # PRIVATE
rand = "0.8.5"  # PRIVATE
thiserror = "1.0.38"  # PRIVATE

